src/objects/collect__Promise_To_Pay__c.object
<CustomObject>
    <fields>
        <fullName>collect__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Promise To Pay</relationshipLabel>
        <relationshipName>Promise_To_Pay</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Promise To Pay</relationshipLabel>
        <relationshipName>Promise_To_Pay</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Contract_Name__c</fullName>
        <label>Contract</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Create_Payment_Plan_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Payment Plan Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Interaction_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interaction Log</label>
        <referenceTo>collect__Interaction_Log__c</referenceTo>
        <relationshipLabel>Promise To Pay</relationshipLabel>
        <relationshipName>Promise_To_Pay</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>collect__Lease_Account_Id__c</fullName>
        <label>Lease Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Loan_Account_Id__c</fullName>
        <label>Loan Account Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collect__Promise_Broken__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promise Broken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Promise_Kept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promise Kept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>collect__Promise_Made_On__c</fullName>
        <label>Promise Made On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>collect__Promise_To_Pay_Amount__c</fullName>
        <label>Promise To Pay Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collect__Promise_To_Pay_Date__c</fullName>
        <label>Promise To Pay Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Promise To Pay</label>
    <nameField>
        <displayFormat>PTPID-{0000000000}</displayFormat>
        <label>Promise To Pay ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promise To Pay</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>